--- a/website/index.html
+++ b/website/index.html
@@ -31,6 +31,7 @@
       </div>
     </div>
   </div>
+  <script src='config.js' type='text/javascript'></script>
   <script src="app.js" type="text/javascript"></script>
 
 </body>
