--- a/website/index.html
+++ b/website/index.html
@@ -15,12 +15,12 @@
     </div>
     <div class="holder zip">
       <label for="zip">Enter Zipcode here</label>
-      <input type="text" id="zip" placeholder="enter zip code here">
+      <input type="text" id="zip" maxlength="5" size="13" placeholder="enter zip code here">
     </div>
     <div class="holder feel">
       <label for="feelings">How are you feeling today?</label>
       <textarea class="myInput" id="feelings" placeholder="Enter your feelings here" rows="9" cols="50"></textarea>
-      <button id="generate" type="submit"> Generate </button>
+      <button id="generate" type="submit">Generate</button>
     </div>
     <div class="holder entry">
       <div class="title">Most Recent Entry</div>
