--- a/website/index.html
+++ b/website/index.html
@@ -11,18 +11,25 @@
 <body>
   <div id="app">
     <div class="holder headline">
-      Weather Journal App
+      <h1>Weather Journal App</h1>
     </div>
     <div class="holder zip">
       <label for="zip">Enter Zipcode here</label>
       <input type="text" id="zip" maxlength="5" size="13" placeholder="enter zip code here">
     </div>
+    <div class="holder units">
+      <p class="unit-title">Choose your units:</p>
+      <label for="metric" class="radio-label">Metric</label>
+      <input type="radio" id="metric" name="units" value="metric">
+      <label for="imperial" class="radio-label">Imperial</label>
+      <input type="radio" id="imperial" name="units" value="imperial">
+    </div>
     <div class="holder feel">
       <label for="feelings">How are you feeling today?</label>
       <textarea class="myInput" id="feelings" placeholder="Enter your feelings here" rows="9" cols="50"></textarea>
-      <button id="generate" type="submit">Generate</button>
     </div>
-    <div class="holder entry">
+    <button id="generate" type="submit">Generate</button>
+    <div class="holder entry hide">
       <div class="title">Most Recent Entry</div>
       <div id="entryHolder">
         <div id="date"></div>
@@ -30,6 +37,11 @@
         <div id="content"></div>
       </div>
     </div>
+    <footer>
+      <h2>
+        A project for Udacity's Front End Web Developer Nanodegree Program
+      </h2>
+    </footer>
   </div>
   <script src='config.js' type='text/javascript'></script>
   <script src="app.js" type="text/javascript"></script>
