Add icon, time, config-sample.js file

--- a/website/index.html
+++ b/website/index.html
@@ -32,6 +32,7 @@
     <div class="holder entry hide">
       <div class="title">Most Recent Entry</div>
       <div id="entryHolder">
+        <div id="icon"></div>
         <div id="date"></div>
         <div id="temp"></div>
         <div id="content"></div>
