Time calculated as time in searched location

--- a/website/index.html
+++ b/website/index.html
@@ -13,9 +13,11 @@
     <div class="holder headline">
       <h1>Weather Journal App</h1>
     </div>
-    <div class="holder zip">
-      <label for="zip">Enter Zipcode here</label>
+    <div class="holder zip city">
+      <label for="zip">Enter zipcode here</label>
       <input type="text" id="zip" maxlength="5" size="13" placeholder="enter zip code here">
+      <label for="city"><b>or</b> Search by city</label>
+      <input type="text" id="city" size="13" placeholder="enter city here">
     </div>
     <div class="holder units">
       <p class="unit-title">Choose your units:</p>
