Add package.json file, default on unit selection

--- a/website/index.html
+++ b/website/index.html
@@ -21,7 +21,7 @@
       <input type="text" id="city" size="13" placeholder="enter city here">
     </div>
     <div class="holder units">
-      <p class="unit-title">Choose your units:</p>
+      <p class="unit-title">Choose your units (default metric):</p>
       <label for="metric" class="radio-label">Metric</label>
       <input type="radio" id="metric" name="units" value="metric">
       <label for="imperial" class="radio-label">Imperial</label>
