--- a/website/index.html
+++ b/website/index.html
@@ -17,7 +17,7 @@
     <div class="holder zip city">
       <label for="zip">Enter zipcode here</label>
       <input type="text" id="zip" maxlength="5" size="13" placeholder="enter zip code here">
-      <label for="city"><b>or</b> Search by city</label>
+      <label for="city"><b>or</b> search by city</label>
       <input type="text" id="city" size="13" placeholder="enter city here">
     </div>
     <div class="holder units">
