--- a/website/index.html
+++ b/website/index.html
@@ -43,8 +43,7 @@
     </div>
     <footer>
       <h2>
-        A project for Udacity's Front End Web Developer Nanodegree Program
-      </h2>
+        A project for Udacity's Front End Web Developer Nanodegree</h2>
     </footer>
   </div>
   <script src='config.js' type='text/javascript'></script>
